# onyx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  contracts.yml  security.yml
config/: trust_registry.sample.yaml
docs/: kyb.md  trust_registry.md
src/onyx/: __init__.py  api.py  ce.py  kyb.py  trust_events.py  trust_registry.py  trust_signals.py
src/onyx/llm/: __init__.py  explain.py
src/onyx/mcp/: __init__.py  manifest.json  server.py
tests/: __init__.py  test_api_trust.py  test_health.py  test_mcp_smoke.py  test_trust_registry.py  test_trust_signals.py
tests/kyb/: test_ce_kyb_verified.py  test_rules.py
